2017-03-30  Pali Roh\'ar  <pali.rohar@gmail.com>

	* ptexmac.h: remove duplicate macros.
	* writet3.c (writet3): ensure fm is non-NULL before dereferencing.
	* mapfile.c (check_fm_entry): omit check for is_reencoded, i.e.,
	an .enc file. This way, each bitmap font is embedded separately,
	thus rasterized by MF instead of geometrically scaling up.
	https://mailman.ntg.nl/pipermail/ntg-pdftex/2017-March/004125.html

2017-03-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writepng.c: Fix the size of memory to allocate when writing
	SMask in write_png_rgb_alpha. Reported by David Fifield:
	http://tug.org/pipermail/pdftex/2017-March/009100.html.

2017-03-18  Karl Berry  <karl@tug.org>

	* NEWS,
	* pdftex_version.h,
	* pdftex.web (pdftex_revision, pdftex_version_string):
	version [1.40.]18 for TL17.

2017-03-16  Pali Roh\'ar  <pali.rohar@gmail.com>

	Allow .enc files for bitmap fonts, following thread at
	http://tug.org/pipermail/pdftex/2016-June/008980.html
	http://tug.org/pipermail/pdftex/2016-July/009012.html:
	* writet3.c (remove_duplicate_glyph_names): new fn.
	(writet3): change fn to take fm_entry object, and use it to write
	glyph names from an enc file, if specified in the map file.
	(write_fontdictionary): 
	* ptexlib.h (writet3): change declaration.
	* writefont.c (dopdffont): change call to writet3.
	* mapfile.c (check_fm_entry): also report missing enc file.

2017-02-18  Heiko Oberdiek  <heiko.oberdiek@googlemail.com>

	* pdftex.web (substr_of_str): move earlier.
	(Write out page object): if \MediaBox was given in \pdfpageattr,
	do not output our own.
	Mail from Michael Altmann to pdftex, 9 Feb 2017 13:19:05.
	http://tug.org/pipermail/pdftex/2017-February/009097.html

2017-02-16  Karl Berry  <karl@freefriends.org>

	* regex/regex_internal.h (alloca) [!alloca]: do not try
	to #define if already #defined.
	Report from Vincent Torri on tex-live list, 7 Jul 2016 10:48:15.
	(pdftex r765)

2016-11-05  Karl Berry  <karl@tug.org>

	* pdftoepdf.cc: doc fix.
