@@ -1,10 +1,16 @@
+2017-04-01  Pali Roh\'ar  <pali.rohar@gmail.com>
+
+	* mapfile.c, ptexlib.h, ptexmac.h, writefont.c, pdftex.defines,
+	pdftex.web: Always embed each bitmap font, even if it has an entry
+	in a font-map file, with different size separately instead of
+	scaling geometrically.
+
 2017-03-30  Pali Roh\'ar  <pali.rohar@gmail.com>
 
 	* ptexmac.h: remove duplicate macros.
 	* writet3.c (writet3): ensure fm is non-NULL before dereferencing.
 	* mapfile.c (check_fm_entry): omit check for is_reencoded, i.e.,
-	an .enc file. This way, each bitmap font is embedded separately,
-	thus rasterized by MF instead of geometrically scaling up.
+	an .enc file.
 	https://mailman.ntg.nl/pipermail/ntg-pdftex/2017-March/004125.html
 
 2017-03-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
